<resources>
    <string name="app_name">Zenfone 6</string>
    <string name="category_gestures_title">Device gestures</string>
    <string name="category_vibrator">Vibrator</string>
    <string name="vib_strength_title_head">Strength</string>
    <string name="vib_strength_summary_head">Define the strength of the vibrator</string>
    <string name="vib_test">Test</string>
    <string name="advanced_settings">Advanced</string>
    <string name="graphics_title">Graphics</string>
    <string name="screen_title">Screen Sensitivity</string>
    <string name="glove_mode_summary">Increase touch sensitivity when wearing gloves</string>
    <string name="glove_mode_title">Glove mode</string>
    <string name="proxi_summary_head">Check proximity sensor for handling fingerprint sensor</string>
    <string name="proxi_title_head">Proximity check</string>
    <string name="choose_app">Choose app</string>
    <string name="offscreen_gesture_title">Offscreen gestures</string>
    <string name="category_c_gesture">Letter c</string>
    <string name="category_e_gesture">Letter e</string>
    <string name="category_s_gesture">Letter s</string>
    <string name="category_v_gesture">Letter v</string>
    <string name="category_w_gesture">Letter w</string>
    <string name="category_z_gesture">Letter z</string>
    <string name="category_left_arrow_gesture">&lt; gesture</string>
    <string name="category_right_arrow_gesture">&gt; gesture</string>
    <string name="category_gestures_summary">Configure gesture actions</string>
    <string name="torch_entry">Flashlight</string>
    <string name="disabled_entry">Disabled</string>
    <string name="camera_entry">Camera</string>
    <string name="camera_label">Rotate camera</string>
    <string name="music_play_entry">Play / pause music</string>
    <string name="music_prev_entry">Prev track</string>
    <string name="music_next_entry">Next track</string>
    <string name="volume_up">Raise volume</string>
    <string name="volume_down">Lower volume</string>
    <string name="browse_scroll_up">Scroll up</string>
    <string name="browse_scroll_down">Scroll down</string>
    <string name="navigate_back">Back</string>
    <string name="navigate_home">Home</string>
    <string name="navigate_recent">Recent</string>
    <string name="not_ready_summary">Resolving...</string>
    <string name="resolve_failed_summary">Resolving app failed</string>
    <string name="category_down_swipe_gesture">Down swipe</string>
    <string name="category_up_swipe_gesture">Up swipe</string>
    <string name="category_left_swipe_gesture">Left swipe</string>
    <string name="category_right_swipe_gesture">Right swipe</string>
    <string name="doze_category_title">Ambient display</string>
    <string name="doze_category_summary">Wake screen when you receive notifications</string>
    <string name="wave_check_summary">Pulse notifications on hand wave</string>
    <string name="wave_check_title">Hand wave</string>
    <string name="tilt_check_summary">Pulse notifications when device is picked up</string>
    <string name="tilt_check_title">Pick up</string>
    <string name="pocket_check_summary">Pulse notifications on removal from pocket</string>
    <string name="pocket_check_title">Pocket</string>
    <string name="ambient_display_enable">Ambient display must be enabled in display settings</string>
    <string name="wake_entry">Wakeup</string>
    <string name="swipe_up_to_wake_up_title">Swipe up to wake up</string>
    <string name="swipe_up_to_wake_up_summary">Swipe up on the screen to wake up your device from idle mode</string>
    <string name="category_frame_rate">FPS of the screen</string>
    <string name="refresh_rate_title">Refresh rate</string>
    <string name="summary_placeholder"> </string>
    <string name="gaming_title">Airtriggers and Game Genie</string>
    <string name="game_genie_title">Game Genie</string>
    <string name="gaming_browse_summary">Lunch game genie settings</string>
    <string name="volume_mode">Sound</string>
    <string name="vibrate_mode">Vibrate</string>
    <string name="mute_mode">Mute</string>
    <string name="app_google_assistant">Google Assistant</string>
    <string name="app_google_assistant_voice">Google Assistant / Google Voice Search</string>
    <string name="app_google_voice_search">Google Voice Search</string>
    <string name="accelerometer_title">Auto-rotate screen</string>
    <string name="google_assist_edit_app">Select an app</string>
    <string name="google_assist_not_support_wairning">Please note that Google Assistant is not available in some regions or countries, so Google Search is provided instead in these areas.</string>
    <string name="google_assist_pref_Alarm">Set alarm</string>
    <string name="google_assist_pref_alarm_snooze">Snooze alarm</string>
    <string name="google_assist_pref_album">Open photo album</string>
    <string name="google_assist_pref_allow_when_screen_off">Allow when screen is off</string>
    <string name="google_assist_pref_answer_the_call">Answer call</string>
    <string name="google_assist_pref_bluetooth">Bluetooth</string>
    <string name="google_assist_pref_calculator">Calculator</string>
    <string name="google_assist_pref_cam_back">Open camera</string>
    <string name="google_assist_pref_cam_front">Open front camera</string>
    <string name="google_assist_pref_currency_convert">Currency converter</string>
    <string name="google_assist_pref_customization">Customization</string>
    <string name="google_assist_pref_none">None</string>
    <string name="google_assist_pref_phone_call">Make a call</string>
    <string name="google_assist_pref_press_for_silence">Press to mute</string>
    <string name="google_assist_pref_qr_code">Show my QR code</string>
    <string name="google_assist_pref_recent_file">Recent files</string>
    <string name="google_assist_pref_recorder">Sound recording</string>
    <string name="google_assist_pref_self_def_summary">Tap to select</string>
    <string name="google_assist_pref_single_top_when_screen_off">Allow press once gesture when screen is off</string>
    <string name="google_assist_pref_single_top_when_screen_off_summary">Trigger function when screen is off</string>
    <string name="google_assist_pref_snap_shot">Google Assistant with personal updates</string>
    <string name="google_assist_pref_sound_mode">Sound mode</string>
    <string name="google_assist_pref_sound_mode_summary">Sound / vibrate / silent</string>
    <string name="google_assist_pref_stop_watch">Stopwatch</string>
    <string name="google_assist_pref_take_picture">Take picture</string>
    <string name="google_assist_pref_timer">Timer</string>
    <string name="google_assist_pref_unit_convert">Unit converter</string>
    <string name="google_assist_pref_video_recording">Record video</string>
    <string name="google_assist_pref_wake_up">Wake up Google Assistant</string>
    <string name="google_assist_pref_wakie_talkie">Google Assistant in walkie-talkie mode</string>
    <string name="google_assist_pref_wifi">Wi-Fi</string>
    <string name="google_assist_pref_wifi_tether">Hotspot</string>
    <string name="google_assist_single_tap_reminder_desc">Allow gesture(s) when screen is off may cause accidental touches. Are you sure you want to turn it on?</string>
    <string name="google_assist_single_tap_reminder_title">Reminder</string>
    <string name="google_assist_summary_alarm_snooze">Press to snooze an alarm</string>
    <string name="google_assist_summary_allow_when_screen_off">Allow Smart Key to function even when screen is off</string>
    <string name="google_assist_summary_answer_the_call">Press to answer incoming calls</string>
    <string name="google_assist_summary_camera_shutter">Launch camera and press shutter</string>
    <string name="google_assist_summary_press_for_silence">Press to mute alarms, timers, notifications, and incoming calls</string>
    <string name="google_assist_summary_press_to_stop">Press again to stop</string>
    <string name="google_assist_summary_select_number">Select a phone number</string>
    <string name="google_assist_summary_video_recording">Launch camera and press record</string>
    <string name="google_assist_toast_qr_code">Please edit profile to create a personal QR code</string>
    <string name="google_assist_tutorial_double_tap">Press twice: Call Google Assistant, and your personal updates will be display on Google Assistant page, such as the time and place of your next meeting, and current weather status</string>
    <string name="google_assist_tutorial_press_and_hold">Press and hold: Press and hold the button to keep talking to Google Assistant. When you release the button, Google Assistant will respond immediately</string>
    <string name="google_assist_tutorial_single_tap">Press once: Call Google Assistant</string>
    <string name="google_assistant_double_tap_title">Press twice</string>
    <string name="google_assistant_press_and_hold_title">Press and hold</string>
    <string name="google_assistant_single_tap_title">Press once</string>
    <string name="only_for_some_apps">Only for preloaded apps and apps in the games, social, or communication category in Google Play</string>
    <string name="pref_flashlight">Flashlight</string>
    <string name="pref_start_amoury_crate">Open Armoury Crate</string>
    <string name="pref_x_mode">X Mode</string>
    <string name="asus_zen_mode_settings_title">Do not disturb</string>
    <string name="asus_advanced_settings_screenshot">Screenshot</string>
    <string name="btn_apply">Apply</string>
    <string name="btn_back">Prev</string>
    <string name="btn_next">Next</string>
    <string name="btn_reset">Reset</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>
    <string name="done_button">Done</string>
    <string name="category_gesture_squeeze">Squeeze gesture</string>
    <string name="grip_notifi_complete">Completed!</string>
    <string name="grip_notifi_good">Good!</string>
    <string name="grip_notifi_release">Please release after squeezing</string>
    <string name="grip_notifi_squeeze">Squeeze 3 times to finish setup</string>
    <string name="grip_notifi_squeeze_to_set">Please squeeze to set up force level</string>
    <string name="grip_notifi_success">New force level established</string>
    <string name="grip_notifi_tap_to_set">Please tap to set up force level</string>
    <string name="grip_notifi_test">Current squeeze force test</string>
    <string name="gripsensor_grip_strength_adjust">Squeeze force level</string>
    <string name="gripsensor_grip_strength_adjust_desc">It\'s easier to trigger squeeze gesture with lower force level</string>
    <string name="gripsensor_tap_strength_adjust_desc">It\'s easier to trigger tap gesture with lower force level</string>
    <string name="gripsensor_grip_strength_adjust_title">Force level</string>
    <string name="gripsensor_grip_strength_high">High</string>
    <string name="gripsensor_grip_strength_low">Low</string>
    <string name="gripsensor_heavypress_trigger">Long squeeze</string>
    <string name="gripsensor_lightpress_trigger">Short squeeze</string>
    <string name="gripsensor_single_point_strength_adjust">Button tap force level</string>
    <string name="grip_category_title">AirTriggers</string>
    <string name="grip_summary_left">Force level for left button</string>
    <string name="grip_summary_right">Force level for right button</string>
    <string name="category_airtrigger">Squeeze gesture</string>
    <string name="category_grip_tap_force">Gaming force</string>
    <string name="category_grip_tap_force_both">Force for left and right buttons</string>
    <string name="ckb_increase_sensitivity">Sensitivity Booster</string>
    <string name="grip_category_summary">Settings of your Grip Sensor</string>
    <string name="intro_pressure_new">Current force level</string>
    <string name="intro_pressure_old">Original force level</string>
</resources>