<?xml version="1.0" encoding="UTF-8"?>
<!-- Copyright (C) 2020 The OmniROM Project
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:app="http://schemas.android.com/apk/res-auto"
                  xmlns:omnilib="http://schemas.android.com/apk/res-auto">

    <com.android.settingslib.widget.LayoutPreference
            android:layout="@layout/grip_landscape_tap_tutorial"
            android:selectable="false"
            android:key="tutorial"
            app:allowDividerBelow="false"/>

    <PreferenceCategory
        android:title="@string/category_grip_tap_force_both"
        android:key="griptap_force_both">

        <org.omnirom.device.GripTapForcePreference
            android:key="griptap_force_left"
            android:title="@string/gripsensor_single_point_strength_adjust"
            android:summary="@string/grip_summary_left"
            android:persistent="false" />

        <org.omnirom.device.GripTapForceRightPreference
            android:key="griptap_force_right"
            android:title="@string/gripsensor_single_point_strength_adjust"
            android:summary="@string/grip_summary_right"
            android:persistent="false" />

    </PreferenceCategory>

</PreferenceScreen>